Kaelig use case initial commit

--- a/studio.config.json
+++ b/studio.config.json
@@ -1,19 +1,4 @@
 {
   "packages": {
-    "dir": "",
-    "menu": [
-      [
-        "TOKENS",
-        []
-      ],
-      [
-        "COMPONENTS",
-        []
-      ],
-      [
-        "INFRASTRUCTURE",
-        []
-      ]
-    ]
-  }
+    "dir": "design-system/"
 }
